// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - settings fee recipient can update 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 44042,
}
`;

exports[`EthVault - settings metadata IPFS hash only admin can update 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 32689,
}
`;

exports[`EthVault - settings validators manager can be updated by admin 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 52819,
}
`;
